--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>This is page 1</h1>
-<https://join.me/nttucourse>Go to page 2</a>
+<h1>This is page 2</h1>
+<https://drive.google.com/file/d/1VfTBcO0UVCGsLF2j4Y_lXwRC7OxuXI0L/view>Go to page 1</a>
 </body>
 </html>
