--- a/123.html
+++ b/123.html
@@ -10,7 +10,7 @@
 <p>《英雄聯盟》（英語：League of Legends，簡稱LoL）是由Riot Games開發及發行的一款多人線上戰術擂台（MOBA）遊戲，遊戲為免費模式進行並提供付費道具服務。該遊戲是受到《魔獸爭霸III：寒冰霸權》中一個名為DotA第三方自定義地圖啟發而誕生，且至今仍不斷定期更新。</p>
 </div>
 <div style="width:200px; float:right;height:300px;background-color:#cecece">
-<audio autoplay controls src="y2mate.com - kda_popstars_ft_madison_beer_gi_dle_jaira_burns_music_video_league_of_legends_UOxkGD8qRB4.mp3"></audio>
+<audio  controls src="y2mate.com - kda_popstars_ft_madison_beer_gi_dle_jaira_burns_music_video_league_of_legends_UOxkGD8qRB4.mp3"></audio>
 
 </div>
 <div style="height:300px;background-color:#fffaf3">
