--- a/741.html
+++ b/741.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body {background-image:url("image.jpg");background-repeat:no-repeat;}
+body {background-image:url("image.jpg");background-repeat:no-repeat;background-size: 640px 480px;}
 </style>
 </head>
 
