--- a/741.html
+++ b/741.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <style>
-body {background-image:url("image.jpg");background-repeat:no-repeat;background-size: 1080px 480px;}
+body {background-image:url("123.jpg");background-repeat:no-repeat;background-size: 640px 480px;}
 </style>
 </head>
 
 <body>
-<h1>Hello World!</h1>
+<h1>Party Time!</h1>
 </body>
 
 </html>
