--- a/741.html
+++ b/741.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <style>
-body {background-image:url("123.jpg");background-repeat:no-repeat;background-size: 640px 480px;}
+body {background-image:url("123.jpg");background-repeat:no-repeat;background-size: cover;}
 </style>
 </head>
 
